# raytracer

./: .gitignore  10spp  CMakeLists.txt  CODESPACE.md  README.md  aabb.h  aacne  arbpdf  bvh.h  camera.h  color.h  constant_medium.h  convert_ppm.sh  cornell  cornell1k  cornell1k-800px  cornell_box.ppm  cornell_smoke.ppm  cos_cubed.cc  cosd  estimate_halfway.cc  final_scene_book2.ppm  final_scene_book2_mini.ppm  hittable.h  hittable_list.h  interval.h  main.cc  main.cpp  maincc  maincc1k  make_scripts_executable.sh  material.h  mixpdf  onb.h  output.ppm  pdf.h  pdfglass  pdfhitlist  perlin.h  pi.cc  (+12 more)
.devcontainer/: Dockerfile  devcontainer.json
images/: README.md  ground_image.ppm  image_aa.ppm  image_checker_ground.ppm  image_checker_spheres.ppm  image_defocus.ppm  image_distant.ppm  image_earth.ppm  image_materials.ppm  image_materials_glass.ppm  image_materials_hollow_glass.ppm  image_moving_sphere.ppm  image_simple_diffuse.ppm  image_simple_diffuse_big.ppm  image_wide_fov.ppm  image_zoomin.ppm  perlin_sphere.ppm  perlin_sphere_hermite.ppm  perlin_sphere_highfreq.ppm  perlin_sphere_marble.ppm  perlin_sphere_randvec.ppm  perlin_sphere_trilinear.ppm  perlin_sphere_turb.ppm  quads.ppm  simple_light.ppm  simple_light_sphere.ppm  sky_image.ppm  sky_image_normal_shade.ppm
